--- a/app/src/main/res/layout/activity_tela_inicial.xml
+++ b/app/src/main/res/layout/activity_tela_inicial.xml
@@ -1,49 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    tools:context=".TelaInicialActivity"
-    android:orientation="horizontal">
+    android:id="@+id/layoutMenuLateral"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
 
-    <Button
-        android:id="@+id/botao_servico"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:text="Serviço"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="166dp" />
+        <!--Conteúdo da tela-->
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            tools:context=".TelaInicialActivity">
 
+            <include layout="@layout/toolbar" />
 
-
-    <Button
-        android:id="@+id/botao_cadastro"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Cadastro"
-        android:orientation="horizontal"
-        tools:layout_editor_absoluteX="185dp"
-        tools:layout_editor_absoluteY="311dp" />
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerServicos"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:cacheColorHint="@android:color/transparent"
+                    android:clipToPadding="false"
+                    android:divider="@null"
+                    android:dividerHeight="0dp"
+                    android:listSelector="@android:color/transparent"
+                    android:scrollbarStyle="outsideOverlay"
+                    android:scrollbars="vertical">
+                </androidx.recyclerview.widget.RecyclerView>
 
-    <Button
-        android:id="@+id/botao_produto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:text="Produto"
-        tools:layout_editor_absoluteX="180dp"
-        tools:layout_editor_absoluteY="430dp" />
+            </ScrollView>
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:visibility="invisible"/>
+        </LinearLayout>
 
-</LinearLayout>
+
+        <!--Menu lateral-->
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/menu_lateral"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/menu_lateral_cabecalho"
+            app:menu="@menu/menu_lateral"
+
+            >
+
+
+        </com.google.android.material.navigation.NavigationView>
+
+
+</androidx.drawerlayout.widget.DrawerLayout>
